marioPP2/y.output
Terminals unused in grammar

   T_Dims


State 59 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VariableDecl
    5     | FunctionDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VariableDecl: Variable ';'

    9 Variable: Type T_Identifier ';'

   10 Type: T_Bool
   11     | T_Int
   12     | T_Double
   13     | T_Identifier
   14     | T_String
   15     | Type '[' ']'

   16 FunctionDecl: Type T_Identifier '(' Formals ')' StmtBlock
   17             | T_Void T_Identifier '(' Formals ')' StmtBlock

   18 Formals: Formals_List
   19        | %empty

   20 Formals_List: Variable
   21             | Formals_List ',' Variable

   22 ClassDecl: T_Class T_Identifier ClassDecl_a ClassDecl_b '{' ClassDecl_F '}'

   23 ClassDecl_a: T_Extends T_Identifier
   24            | %empty

   25 ClassDecl_b: T_Implements T_Identifier
   26            | ClassDecl_b ',' T_Implements T_Identifier
   27            | %empty

   28 ClassDecl_F: ClassDecl_F Field
   29            | %empty

   30 Field: VariableDecl
   31      | FunctionDecl

   32 InterfaceDecl: T_Interface T_Identifier '{' InterfaceDecl_P '}'

   33 InterfaceDecl_P: InterfaceDecl_P Prototype
   34                | %empty

   35 Prototype: Type T_Identifier '(' Formals ')' ';' T_Void T_Identifier '(' Formals ')' ';'

   36 StmtBlock: '{' StmtBlock_VD StmtBlock_Stmt '}'

   37 StmtBlock_VD: StmtBlock_VD VariableDecl
   38             | %empty

   39 StmtBlock_Stmt: StmtBlock_Stmt Stmt
   40               | %empty

   41 Stmt: Expr_List ';'
   42     | IfStmt
   43     | WhileStmt
   44     | ForStmt
   45     | BreakStmt
   46     | ReturnStmt
   47     | PrintStmt
   48     | StmtBlock

   49 Expr_List: Expr
   50          | %empty

   51 IfStmt: T_If '(' Expr ')' IfStmt_Else

   52 IfStmt_Else: T_Else Stmt
   53            | %empty

   54 WhileStmt: T_While '(' Expr ')' Stmt

   55 ForStmt: T_For '(' Expr_List ';' Expr ';' Expr_List ')' Stmt

   56 ReturnStmt: T_Return Expr_List ';'

   57 BreakStmt: T_Break ';'

   58 PrintStmt: T_Print '(' Expr_pl ')' ';'

   59 Expr_pl: Expr
   60        | Expr_pl ',' Expr

   61 Expr: LValue '=' Expr
   62     | Constant
   63     | LValue
   64     | T_This
   65     | Call
   66     | '(' Expr ')'
   67     | Expr '+' Expr
   68     | Expr '-' Expr
   69     | Expr '*' Expr
   70     | Expr '/' Expr
   71     | Expr '%' Expr
   72     | '-' Expr
   73     | Expr '<' Expr
   74     | Expr '>' Expr
   75     | Expr T_LessEqual Expr
   76     | Expr T_GreaterEqual Expr
   77     | Expr T_Equal Expr
   78     | Expr T_NotEqual Expr
   79     | Expr T_And Expr
   80     | Expr T_Or Expr
   81     | '!' Expr
   82     | T_ReadInteger '(' ')'
   83     | T_ReadLine '(' ')'
   84     | T_New '(' T_Identifier ')'
   85     | T_NewArray '(' Expr ',' Type ')'

   86 LValue: T_Identifier
   87       | Expr '.' T_Identifier
   88       | Expr '[' Expr ']'

   89 Call: T_Identifier '(' Actuals ')'
   90     | Expr '.' T_Identifier '(' Actuals ')'

   91 Actuals: Expr_pl
   92        | %empty

   93 Constant: T_IntConstant
   94         | T_DoubleConstant
   95         | T_BoolConstant
   96         | T_StringConstant
   97         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 81
'%' (37) 71
'(' (40) 16 17 35 51 54 55 58 66 82 83 84 85 89 90
')' (41) 16 17 35 51 54 55 58 66 82 83 84 85 89 90
'*' (42) 69
'+' (43) 67
',' (44) 21 26 60 85
'-' (45) 68 72
'.' (46) 87 90
'/' (47) 70
';' (59) 8 9 35 41 55 56 57 58
'<' (60) 73
'=' (61) 61
'>' (62) 74
'[' (91) 15 88
']' (93) 15 88
'{' (123) 22 32 36
'}' (125) 22 32 36
error (256)
T_Void (258) 17 35
T_Bool (259) 10
T_Int (260) 11
T_Double (261) 12
T_String (262) 14
T_Class (263) 22
T_LessEqual (264) 75
T_GreaterEqual (265) 76
T_Equal (266) 77
T_NotEqual (267) 78
T_Dims (268)
T_And (269) 79
T_Or (270) 80
T_Null (271) 97
T_Extends (272) 23
T_This (273) 64
T_Interface (274) 32
T_Implements (275) 25 26
T_While (276) 54
T_For (277) 55
T_If (278) 51
T_Else (279) 52
T_Return (280) 56
T_Break (281) 57
T_New (282) 84
T_NewArray (283) 85
T_Print (284) 58
T_ReadInteger (285) 82
T_ReadLine (286) 83
T_Identifier (287) 9 13 16 17 22 23 25 26 32 35 84 86 87 89 90
T_StringConstant (288) 96
T_IntConstant (289) 93
T_DoubleConstant (290) 94
T_BoolConstant (291) 95
Unary_Neg (292)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
Program (57)
    on left: 1, on right: 0
DeclList (58)
    on left: 2 3, on right: 1 2
Decl (59)
    on left: 4 5 6 7, on right: 2 3
VariableDecl (60)
    on left: 8, on right: 4 30 37
Variable (61)
    on left: 9, on right: 8 20 21
Type (62)
    on left: 10 11 12 13 14 15, on right: 9 15 16 35 85
FunctionDecl (63)
    on left: 16 17, on right: 5 31
Formals (64)
    on left: 18 19, on right: 16 17 35
Formals_List (65)
    on left: 20 21, on right: 18 21
ClassDecl (66)
    on left: 22, on right: 6
ClassDecl_a (67)
    on left: 23 24, on right: 22
ClassDecl_b (68)
    on left: 25 26 27, on right: 22 26
ClassDecl_F (69)
    on left: 28 29, on right: 22 28
Field (70)
    on left: 30 31, on right: 28
InterfaceDecl (71)
    on left: 32, on right: 7
InterfaceDecl_P (72)
    on left: 33 34, on right: 32 33
Prototype (73)
    on left: 35, on right: 33
StmtBlock (74)
    on left: 36, on right: 16 17 48
StmtBlock_VD (75)
    on left: 37 38, on right: 36 37
StmtBlock_Stmt (76)
    on left: 39 40, on right: 36 39
Stmt (77)
    on left: 41 42 43 44 45 46 47 48, on right: 39 52 54 55
Expr_List (78)
    on left: 49 50, on right: 41 55 56
IfStmt (79)
    on left: 51, on right: 42
IfStmt_Else (80)
    on left: 52 53, on right: 51
WhileStmt (81)
    on left: 54, on right: 43
ForStmt (82)
    on left: 55, on right: 44
ReturnStmt (83)
    on left: 56, on right: 46
BreakStmt (84)
    on left: 57, on right: 45
PrintStmt (85)
    on left: 58, on right: 47
Expr_pl (86)
    on left: 59 60, on right: 58 60 91
Expr (87)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 85, on right: 49 51 54 55 59 60 61 66 67 68 69
    70 71 72 73 74 75 76 77 78 79 80 81 85 87 88 90
LValue (88)
    on left: 86 87 88, on right: 61 63
Call (89)
    on left: 89 90, on right: 65
Actuals (90)
    on left: 91 92, on right: 89 90
Constant (91)
    on left: 93 94 95 96 97, on right: 62


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VariableDecl   go to state 12
    Variable       go to state 13
    Type           go to state 14
    FunctionDecl   go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17


State 1

   17 FunctionDecl: T_Void . T_Identifier '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 18


State 2

   10 Type: T_Bool .

    $default  reduce using rule 10 (Type)


State 3

   11 Type: T_Int .

    $default  reduce using rule 11 (Type)


State 4

   12 Type: T_Double .

    $default  reduce using rule 12 (Type)


State 5

   14 Type: T_String .

    $default  reduce using rule 14 (Type)


State 6

   22 ClassDecl: T_Class . T_Identifier ClassDecl_a ClassDecl_b '{' ClassDecl_F '}'

    T_Identifier  shift, and go to state 19


State 7

   32 InterfaceDecl: T_Interface . T_Identifier '{' InterfaceDecl_P '}'

    T_Identifier  shift, and go to state 20


State 8

   13 Type: T_Identifier .

    $default  reduce using rule 13 (Type)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 21


State 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 22
    VariableDecl   go to state 12
    Variable       go to state 13
    Type           go to state 14
    FunctionDecl   go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17


State 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 12

    4 Decl: VariableDecl .

    $default  reduce using rule 4 (Decl)


State 13

    8 VariableDecl: Variable . ';'

    ';'  shift, and go to state 23


State 14

    9 Variable: Type . T_Identifier ';'
   15 Type: Type . '[' ']'
   16 FunctionDecl: Type . T_Identifier '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 24
    '['           shift, and go to state 25


State 15

    5 Decl: FunctionDecl .

    $default  reduce using rule 5 (Decl)


State 16

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


State 17

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


State 18

   17 FunctionDecl: T_Void T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 26


State 19

   22 ClassDecl: T_Class T_Identifier . ClassDecl_a ClassDecl_b '{' ClassDecl_F '}'

    T_Extends  shift, and go to state 27

    $default  reduce using rule 24 (ClassDecl_a)

    ClassDecl_a  go to state 28


State 20

   32 InterfaceDecl: T_Interface T_Identifier . '{' InterfaceDecl_P '}'

    '{'  shift, and go to state 29


State 21

    0 $accept: Program $end .

    $default  accept


State 22

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 23

    8 VariableDecl: Variable ';' .

    $default  reduce using rule 8 (VariableDecl)


State 24

    9 Variable: Type T_Identifier . ';'
   16 FunctionDecl: Type T_Identifier . '(' Formals ')' StmtBlock

    ';'  shift, and go to state 30
    '('  shift, and go to state 31


State 25

   15 Type: Type '[' . ']'

    ']'  shift, and go to state 32


State 26

   17 FunctionDecl: T_Void T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable      go to state 33
    Type          go to state 34
    Formals       go to state 35
    Formals_List  go to state 36


State 27

   23 ClassDecl_a: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 37


State 28

   22 ClassDecl: T_Class T_Identifier ClassDecl_a . ClassDecl_b '{' ClassDecl_F '}'

    T_Implements  shift, and go to state 38

    $default  reduce using rule 27 (ClassDecl_b)

    ClassDecl_b  go to state 39


State 29

   32 InterfaceDecl: T_Interface T_Identifier '{' . InterfaceDecl_P '}'

    $default  reduce using rule 34 (InterfaceDecl_P)

    InterfaceDecl_P  go to state 40


State 30

    9 Variable: Type T_Identifier ';' .

    $default  reduce using rule 9 (Variable)


State 31

   16 FunctionDecl: Type T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable      go to state 33
    Type          go to state 34
    Formals       go to state 41
    Formals_List  go to state 36


State 32

   15 Type: Type '[' ']' .

    $default  reduce using rule 15 (Type)


State 33

   20 Formals_List: Variable .

    $default  reduce using rule 20 (Formals_List)


State 34

    9 Variable: Type . T_Identifier ';'
   15 Type: Type . '[' ']'

    T_Identifier  shift, and go to state 42
    '['           shift, and go to state 25


State 35

   17 FunctionDecl: T_Void T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 43


State 36

   18 Formals: Formals_List .
   21 Formals_List: Formals_List . ',' Variable

    ','  shift, and go to state 44

    $default  reduce using rule 18 (Formals)


State 37

   23 ClassDecl_a: T_Extends T_Identifier .

    $default  reduce using rule 23 (ClassDecl_a)


State 38

   25 ClassDecl_b: T_Implements . T_Identifier

    T_Identifier  shift, and go to state 45


State 39

   22 ClassDecl: T_Class T_Identifier ClassDecl_a ClassDecl_b . '{' ClassDecl_F '}'
   26 ClassDecl_b: ClassDecl_b . ',' T_Implements T_Identifier

    ','  shift, and go to state 46
    '{'  shift, and go to state 47


State 40

   32 InterfaceDecl: T_Interface T_Identifier '{' InterfaceDecl_P . '}'
   33 InterfaceDecl_P: InterfaceDecl_P . Prototype

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 48

    Type       go to state 49
    Prototype  go to state 50


State 41

   16 FunctionDecl: Type T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 51


State 42

    9 Variable: Type T_Identifier . ';'

    ';'  shift, and go to state 30


State 43

   17 FunctionDecl: T_Void T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 52

    StmtBlock  go to state 53


State 44

   21 Formals_List: Formals_List ',' . Variable

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Variable  go to state 54
    Type      go to state 34


State 45

   25 ClassDecl_b: T_Implements T_Identifier .

    $default  reduce using rule 25 (ClassDecl_b)


State 46

   26 ClassDecl_b: ClassDecl_b ',' . T_Implements T_Identifier

    T_Implements  shift, and go to state 55


State 47

   22 ClassDecl: T_Class T_Identifier ClassDecl_a ClassDecl_b '{' . ClassDecl_F '}'

    $default  reduce using rule 29 (ClassDecl_F)

    ClassDecl_F  go to state 56


State 48

   32 InterfaceDecl: T_Interface T_Identifier '{' InterfaceDecl_P '}' .

    $default  reduce using rule 32 (InterfaceDecl)


State 49

   15 Type: Type . '[' ']'
   35 Prototype: Type . T_Identifier '(' Formals ')' ';' T_Void T_Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 57
    '['           shift, and go to state 25


State 50

   33 InterfaceDecl_P: InterfaceDecl_P Prototype .

    $default  reduce using rule 33 (InterfaceDecl_P)


State 51

   16 FunctionDecl: Type T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 52

    StmtBlock  go to state 58


State 52

   36 StmtBlock: '{' . StmtBlock_VD StmtBlock_Stmt '}'

    $default  reduce using rule 38 (StmtBlock_VD)

    StmtBlock_VD  go to state 59


State 53

   17 FunctionDecl: T_Void T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 17 (FunctionDecl)


State 54

   21 Formals_List: Formals_List ',' Variable .

    $default  reduce using rule 21 (Formals_List)


State 55

   26 ClassDecl_b: ClassDecl_b ',' T_Implements . T_Identifier

    T_Identifier  shift, and go to state 60


State 56

   22 ClassDecl: T_Class T_Identifier ClassDecl_a ClassDecl_b '{' ClassDecl_F . '}'
   28 ClassDecl_F: ClassDecl_F . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 61

    VariableDecl  go to state 62
    Variable      go to state 13
    Type          go to state 14
    FunctionDecl  go to state 63
    Field         go to state 64


State 57

   35 Prototype: Type T_Identifier . '(' Formals ')' ';' T_Void T_Identifier '(' Formals ')' ';'

    '('  shift, and go to state 65


State 58

   16 FunctionDecl: Type T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 16 (FunctionDecl)


State 59

   36 StmtBlock: '{' StmtBlock_VD . StmtBlock_Stmt '}'
   37 StmtBlock_VD: StmtBlock_VD . VariableDecl

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    T_Identifier  [reduce using rule 40 (StmtBlock_Stmt)]
    $default      reduce using rule 40 (StmtBlock_Stmt)

    VariableDecl    go to state 66
    Variable        go to state 13
    Type            go to state 34
    StmtBlock_Stmt  go to state 67


State 60

   26 ClassDecl_b: ClassDecl_b ',' T_Implements T_Identifier .

    $default  reduce using rule 26 (ClassDecl_b)


State 61

   22 ClassDecl: T_Class T_Identifier ClassDecl_a ClassDecl_b '{' ClassDecl_F '}' .

    $default  reduce using rule 22 (ClassDecl)


State 62

   30 Field: VariableDecl .

    $default  reduce using rule 30 (Field)


State 63

   31 Field: FunctionDecl .

    $default  reduce using rule 31 (Field)


State 64

   28 ClassDecl_F: ClassDecl_F Field .

    $default  reduce using rule 28 (ClassDecl_F)


State 65

   35 Prototype: Type T_Identifier '(' . Formals ')' ';' T_Void T_Identifier '(' Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable      go to state 33
    Type          go to state 34
    Formals       go to state 68
    Formals_List  go to state 36


State 66

   37 StmtBlock_VD: StmtBlock_VD VariableDecl .

    $default  reduce using rule 37 (StmtBlock_VD)


State 67

   36 StmtBlock: '{' StmtBlock_VD StmtBlock_Stmt . '}'
   39 StmtBlock_Stmt: StmtBlock_Stmt . Stmt

    T_Null            shift, and go to state 69
    T_This            shift, and go to state 70
    T_While           shift, and go to state 71
    T_For             shift, and go to state 72
    T_If              shift, and go to state 73
    T_Return          shift, and go to state 74
    T_Break           shift, and go to state 75
    T_New             shift, and go to state 76
    T_NewArray        shift, and go to state 77
    T_Print           shift, and go to state 78
    T_ReadInteger     shift, and go to state 79
    T_ReadLine        shift, and go to state 80
    T_Identifier      shift, and go to state 81
    T_StringConstant  shift, and go to state 82
    T_IntConstant     shift, and go to state 83
    T_DoubleConstant  shift, and go to state 84
    T_BoolConstant    shift, and go to state 85
    '-'               shift, and go to state 86
    '!'               shift, and go to state 87
    '('               shift, and go to state 88
    '{'               shift, and go to state 52
    '}'               shift, and go to state 89

    $default  reduce using rule 50 (Expr_List)

    StmtBlock   go to state 90
    Stmt        go to state 91
    Expr_List   go to state 92
    IfStmt      go to state 93
    WhileStmt   go to state 94
    ForStmt     go to state 95
    ReturnStmt  go to state 96
    BreakStmt   go to state 97
    PrintStmt   go to state 98
    Expr        go to state 99
    LValue      go to state 100
    Call        go to state 101
    Constant    go to state 102


State 68

   35 Prototype: Type T_Identifier '(' Formals . ')' ';' T_Void T_Identifier '(' Formals ')' ';'

    ')'  shift, and go to state 103


State 69

   97 Constant: T_Null .

    $default  reduce using rule 97 (Constant)


State 70

   64 Expr: T_This .

    $default  reduce using rule 64 (Expr)


State 71

   54 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 104


State 72

   55 ForStmt: T_For . '(' Expr_List ';' Expr ';' Expr_List ')' Stmt

    '('  shift, and go to state 105


State 73

   51 IfStmt: T_If . '(' Expr ')' IfStmt_Else

    '('  shift, and go to state 106


State 74

   56 ReturnStmt: T_Return . Expr_List ';'

    T_Null            shift, and go to state 69
    T_This            shift, and go to state 70
    T_New             shift, and go to state 76
    T_NewArray        shift, and go to state 77
    T_ReadInteger     shift, and go to state 79
    T_ReadLine        shift, and go to state 80
    T_Identifier      shift, and go to state 81
    T_StringConstant  shift, and go to state 82
    T_IntConstant     shift, and go to state 83
    T_DoubleConstant  shift, and go to state 84
    T_BoolConstant    shift, and go to state 85
    '-'               shift, and go to state 86
    '!'               shift, and go to state 87
    '('               shift, and go to state 88

    $default  reduce using rule 50 (Expr_List)

    Expr_List  go to state 107
    Expr       go to state 99
    LValue     go to state 100
    Call       go to state 101
    Constant   go to state 102


State 75

   57 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 108


State 76

   84 Expr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 109


State 77

   85 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 110


State 78

   58 PrintStmt: T_Print . '(' Expr_pl ')' ';'

    '('  shift, and go to state 111


State 79

   82 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 112


State 80

   83 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 113


State 81

   86 LValue: T_Identifier .
   89 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 114

    $default  reduce using rule 86 (LValue)


State 82

   96 Constant: T_StringConstant .

    $default  reduce using rule 96 (Constant)


State 83

   93 Constant: T_IntConstant .

    $default  reduce using rule 93 (Constant)


State 84

   94 Constant: T_DoubleConstant .

    $default  reduce using rule 94 (Constant)


State 85

   95 Constant: T_BoolConstant .

    $default  reduce using rule 95 (Constant)


State 86

   72 Expr: '-' . Expr

    T_Null            shift, and go to state 69
    T_This            shift, and go to state 70
    T_New             shift, and go to state 76
    T_NewArray        shift, and go to state 77
    T_ReadInteger     shift, and go to state 79
    T_ReadLine        shift, and go to state 80
    T_Identifier      shift, and go to state 81
    T_StringConstant  shift, and go to state 82
    T_IntConstant     shift, and go to state 83
    T_DoubleConstant  shift, and go to state 84
    T_BoolConstant    shift, and go to state 85
    '-'               shift, and go to state 86
    '!'               shift, and go to state 87
    '('               shift, and go to state 88

    Expr      go to state 115
    LValue    go to state 100
    Call      go to state 101
    Constant  go to state 102


State 87

   81 Expr: '!' . Expr

    T_Null            shift, and go to state 69
    T_This            shift, and go to state 70
    T_New             shift, and go to state 76
    T_NewArray        shift, and go to state 77
    T_ReadInteger     shift, and go to state 79
    T_ReadLine        shift, and go to state 80
    T_Identifier      shift, and go to state 81
    T_StringConstant  shift, and go to state 82
    T_IntConstant     shift, and go to state 83
    T_DoubleConstant  shift, and go to state 84
    T_BoolConstant    shift, and go to state 85
    '-'               shift, and go to state 86
    '!'               shift, and go to state 87
    '('               shift, and go to state 88

    Expr      go to state 116
    LValue    go to state 100
    Call      go to state 101
    Constant  go to state 102


State 88

   66 Expr: '(' . Expr ')'
